[profile.release]
panic = 'unwind'

[workspace]
members = [
    'calls',
    'cli',
    'node',
    'relayer',
    'pallets/*',
    'runtime',
]

[patch.crates-io]
ibc                     = { git = "https://github.com/DaviRain-Su/ibc-rs.git", branch = "soares/flex-error"}
tendermint              = { git = "https://github.com/octopus-network/tendermint-rs.git", branch = "octpus-no-std-flex-error" }
tendermint-rpc          = { git = "https://github.com/octopus-network/tendermint-rs.git", branch = "octpus-no-std-flex-error"}
tendermint-proto        = { git = "https://github.com/octopus-network/tendermint-rs.git", branch = "octpus-no-std-flex-error"}
tendermint-light-client = { git = "https://github.com/octopus-network/tendermint-rs.git", branch = "octpus-no-std-flex-error"}
tendermint-testgen      = { git = "https://github.com/octopus-network/tendermint-rs.git", branch = "octpus-no-std-flex-error"}
ics23 = { git = "https://github.com/DaviRain-Su/ics23.git", branch = "suooprt-no-std" }