
[package]
name = 'cli'
version = '0.1.0'
authors = ['Yuanchao Sun <ys@cdot.network>']
edition = '2018'

[dependencies]
async-std = '1.6.2'
anomaly = "0.2.0"
thiserror = "1.0.11"
clap = '2.33.0'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
hex = '0.4.0'
lazy_static = '1.4.0'
substrate-subxt = { git = 'https://github.com/octopus-network/substrate-subxt.git',  version = '0.15.0'}

calls = { path = '../calls' }
pallet-ibc = { path = '../pallets/ibc' }

sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-keyring = '3.0.0'

serde_json = "1"

[dependencies.ibc]
version = "=0.4.0"
default-features = false

[dependencies.tendermint]
version = "=0.19.0"

[dependencies.tendermint-proto]
version = "=0.19.0"
