[package]
name = 'relayer'
version = '0.1.0'
authors = ['Yuanchao Sun <ys@cdot.network>']
edition = '2018'

[dependencies]
async-std = '1.6.2'
clap = '2.33.0'
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive', 'full'] }
env_logger = '0.8.4'
hex = '0.4.0'
log = '0.4.0'
serde = '1.0.115'
serde_derive = '1.0'
toml = '0.5'
substrate-subxt = { version = '0.15.0'}

calls = { path = '../calls' }
node-runtime = { path = '../runtime', package = 'node-template-runtime' }
pallet-ibc = { path = '../pallets/ibc' }

frame-system = '3.0.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-keyring = '3.0.0'
sp-runtime = '3.0.0'
sp-storage = '3.0.0'
sp-trie = '3.0.0'

[dependencies.ibc]
version = "=0.4.0"
default-features = false


[dependencies.tendermint]
version = "=0.19.0"

[dependencies.tendermint-proto]
version = "=0.19.0"